# cos470-sd

./: README.md
lista1/: main.tex
trabalho1/: Cargo.toml
trabalho1/src/: consumer.rs  producer.rs
trabalho2/: Cargo.toml
trabalho2/src/: lib.rs  semaphore.rs  spinlock.rs
trabalho3/: Cargo.toml
trabalho3/src/: lib.rs  main.rs  messages.rs  process.rs  scheduler.rs
