[package]
name = "trabalho1"
version = "0.1.0"
authors = ["jpdl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.24.1", features = ["signal", "process"]}
sysinfo = "0.23.10"
rand = "*"

[lib]
name = "sd"
path = "./src/lib.rs"

[[bin]]
name = "socket_consumer"
path = "./src/bin/socket/consumer.rs"

[[bin]]
name = "socket_producer"
path = "./src/bin/socket/producer.rs"

[[bin]]
name = "pipe"
path = "./src/bin/pipe/main.rs"

[[bin]]
name = "signal_consumer"
path = "./src/bin/signal/signal_consumer.rs"

[[bin]]
name = "signal_producer"
path = "./src/bin/signal/signal_producer.rs"