[package]
name = "trabalho2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
std-semaphore = "*"
log = "0.4.17"
env_logger = "0.9.0"

[lib]
name = "sd"
path = "src/lib.rs"

[[bin]]
name = "spinlock"
path = "src/bin/spinlock.rs"

[[bin]]
name = "semaphore"
path = "src/bin/semaphore.rs"