[package]
name = "trabalho3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
env_logger = "0.9.0"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }

[lib]
name = "sd"
path = "src/lib.rs"